--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body> <h1>This is Paul's amendment</h1>
+<body>
     <div class="container-sm px-4">
         <div class="row gx-5">
             <h1>REST Application</h1>
